# hoedur

./: .gitignore  Cargo.toml  README.md
.git-hooks/: Cargo.toml
archive/: Cargo.toml
archive/src/: common.rs  lib.rs  tar.rs
common/: Cargo.toml
common/log/: debug.yml  info.yml  tests.yml  trace.yml
common/src/: config.rs  error.rs  exit.rs  file_storage.rs  fork.rs  fs.rs  lib.rs  log.rs  random.rs  time.rs
emulator/: Cargo.toml
emulator/hooks/modules/: dump.rn  trace.rn
emulator/src/: archive.rs  counts.rs  debug.rs  fuzzware.rs  interrupt.rs  lib.rs  limits.rs
emulator/src/arch/: arm.rs  mod.rs
emulator/src/hooks/: custom.rs  debug.rs  exit.rs  mod.rs
emulator/src/hooks/custom/: arm.rs  common.rs  symbolizer.rs
emulator/src/hooks/debug/printf_compat/: argument.rs  mod.rs  parser.rs  writer.rs
frametracer/: Cargo.toml
frametracer/src/: bintrace.rs  errors.rs  lib.rs  symbolize.rs
fuzzer/: Cargo.toml
fuzzer/src/: archive.rs  corpus.rs  corpus_archive.rs  coverage.rs  dict.rs  fuzzer.rs  lib.rs  mutation.rs  statistics.rs  stream.rs  stream_distribution.rs
hoedur/: Cargo.toml
hoedur-analyze/: Cargo.toml
hoedur-analyze/src/: coverage.rs  executions.rs  input.rs  lib.rs  plot.rs
hoedur/src/: archive.rs  cli.rs  coverage.rs  hoedur.rs  lib.rs  runner.rs
modeling/: Cargo.toml
modeling/src/: archive.rs  fuzzware.rs  hardware.rs  input.rs  lib.rs  mmio.rs  mmio_model.rs  modeling.rs
modeling/src/fuzzware/: config.rs  docker.rs  local.rs  mmio_models.rs  runner.rs
modeling/src/input/: stream.rs  value.rs
qemu-build/: Cargo.toml
qemu-build/src/: bindings.rs  lib.rs  main.rs
qemu-rs/: Cargo.toml
qemu-rs/src/: coverage.rs  hook.rs  interrupt.rs  lib.rs  lut.rs  memory.rs  qcontrol.rs  qemu.rs  snapshot.rs
qemu-rs/src/arch/: mod.rs
qemu-rs/src/arch/arm/: board.rs  exception.rs  exception_level.rs  mod.rs  nvic.rs  register.rs  snapshot.rs  systick.rs
qemu-rs/src/fuzz/: board.rs  machine.rs  tcg.rs
qemu-rs/src/hook/: abort.rs  basic_block.rs  instruction.rs  interrupt.rs  memory.rs  mmio.rs
qemu-sys/: Cargo.toml  build.rs  fix-clang.patch  wrapper.h
qemu-sys/patches/: hoedur.patch
qemu-sys/src/: cstr.rs  lib.rs  mem.rs  tcg.rs
qemu-sys/src/bindings/: mod.rs
scripts/: eval-bug-combinations.py  eval-bug-reproducer.py  eval-coverage.py  eval-crash-time.py  eval-executions.py  eval-merge-group.py  fuzz-coverage-list.py  fuzz-local.py  fuzz-plot-data.py  fuzz.py  fuzz_common.py
