[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
backtrace = "0.3.67"
bincode = "1.3.3"
fastrand = "1.9.0"
git-version = "0.3.5"
hashbrown = { version = "0.13.2", features = ["serde"] }
log = { version = "0.4.17", features = ["std", "release_max_level_info"] }
log4rs = "1.2.0"
nix = "0.26.2"
pathdiff = "0.2.1"
rand_core = "0.6.4"
rustc-hash = "1.1.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.8.26"
zstd = "0.12.3"
