[package]
name = "emulator"
version = "0.1.0"
authors = ["Simon Wörner <git@simon-woerner.de>"]
edition = "2021"

[features]
arm = ["modeling/arm", "qemu-rs/arm"]

[dependencies]
anyhow = "1.0.71"
archive = { path = "../archive" }
bincode = "1.3.3"
bitflags = "2.2.1"
common = { path = "../common" }
derive_more = { version = "0.99.17", default-features = false, features = [
    "add",
    "add_assign",
] }
endiannezz = "0.6.5"
enum-kinds = "0.5.1"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
frametracer = { path = "../frametracer" }
glob = "0.3.1"
itertools = "0.10.5"
log = "0.4.17"
modeling = { path = "../modeling" }
parking_lot = "0.12.1"
qemu-rs = { path = "../qemu-rs" }
rune = "0.12.3"
serde = { version = "1.0.162", features = ["derive", "rc"] }
serde_yaml = "0.8.26"
variant_count = "1.1.0"
zstd = "0.12.3"

[dev-dependencies]
fastrand = "1.9.0"
insta = "1.29.0"
pretty_assertions = "1.3.0"
tempfile = "3.5.0"
