[package]
name = "frametracer"
version = "0.2.0"
authors = ["Simon Wörner <git@simon-woerner.de>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.10.0"
gag = "1.0.0"
log = "0.4.17"
serde = { version = "1.0.162", features = ["derive"] }
symbolizer = { git = "https://git.noc.ruhr-uni-bochum.de/ermunaz/symbolizer.git", rev = "b22f0dcbbedda21a255b318f16ab75f9a394c599" }
zstd = "0.12.3"

[dev-dependencies]
insta = "1.29.0"
pretty_assertions = "1.3.0"
