[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[features]
arm = ["emulator/arm", "modeling/arm"]

[dependencies]
anyhow = "1.0.71"
archive = { path = "../archive" }
clap = { version = "4.2.7", features = ["derive", "wrap_help"] }
cli-table = "0.4.7"
common = { path = "../common" }
derive_more = { version = "0.99.17", default-features = false, features = [
    "add",
    "add_assign",
] }
emulator = { path = "../emulator" }
enum-kinds = "0.5.1"
enum_dispatch = "0.3.11"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
fastrand = "1.9.0"
fslock = "0.2.1"
itertools = "0.10.5"
lazy-init = "0.5.1"
log = "0.4.17"
modeling = { path = "../modeling" }
num-format = "0.4.4"
once_cell = "1.17.1"
rand = "0.8.5"
rand_distr = "0.4.3"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive", "rc"] }
serde_yaml = "0.8.26"
variant_count = "1.1.0"
zstd = "0.12.3"

[dev-dependencies]
function_name = "0.3.0"
insta = "1.29.0"
pretty_assertions = "1.3.0"
