[package]
name = "hoedur-analyze"
version = "0.1.0"
edition = "2021"

[features]
default = ["arm"]
arm = [
    "hoedur/arm",
    "fuzzer/arm",
    "emulator/arm",
    "modeling/arm",
    "qemu-rs/arm",
]

[dependencies]
anyhow = "1.0.71"
archive = { path = "../archive" }
average = "0.13.1"
bincode = "1.3.3"
clap = { version = "4.2.7", features = ["derive", "wrap_help"] }
cli-table = "0.4.7"
common = { path = "../common" }
emulator = { path = "../emulator" }
fastrand = "1.9.0"
frametracer = { path = "../frametracer" }
fuzzer = { path = "../fuzzer" }
gag = "1.0.0"
hoedur = { path = "../hoedur", default-features = false }
log = "0.4.17"
modeling = { path = "../modeling" }
parking_lot = "0.12.1"
qemu-rs = { path = "../qemu-rs" }
serde = { version = "1.0.162", features = ["derive", "rc"] }
serde_yaml = "0.8.26"
signal-hook = "0.3.15"
tempfile = "3.5.0"
