[package]
name = "qemu-rs"
version = "0.1.0"
authors = ["Simon Wörner <git@simon-woerner.de>"]
edition = "2021"

[features]
arm = ["qemu-sys/arm"]

[dependencies]
anyhow = "1.0.71"
backtrace = "0.3.67"
common = { path = "../common" }
either = "1.8.1"
endiannezz = "0.6.5"
glib-sys = "0.17.4"
leb128 = "0.2.5"
log = "0.4.17"
once_cell = "1.17.1"
parking_lot = "0.12.1"
qemu-sys = { path = "../qemu-sys" }
serde = { version = "1.0.162", features = ["derive", "rc"] }
signal-hook = "0.3.15"
